--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@types/bcrypt": "^5.0.2",
     "@types/ldapjs": "^3.0.6",
     "bcrypt": "^5.1.1",
@@ -17,6 +18,7 @@
     "clsx": "^2.1.1",
     "ldapjs": "^3.0.7",
     "lucide-react": "^0.441.0",
+    "mariadb": "^3.3.1",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
