--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@types/bcrypt": "^5.0.2",
@@ -20,6 +21,7 @@
     "lucide-react": "^0.441.0",
     "mariadb": "^3.3.1",
     "next": "14.2.11",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "sqlite": "^5.1.1",
